--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Web3 Dashboard</title>
+    <title>Connect Wallet</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="index">
 
-    <div class="container">
-        <h1 class="title">Welcome to Your Web3 Dashboard</h1>
-        <p class="subtitle">Connect your wallet to view your assets securely.</p>
+<body class="center-body">
 
-        <button id="myButton" class="connect-btn">Connect Wallet</button>
+    <div class="card">
+        <h1>Connect Your Wallet</h1>
+        <button id="myButton" class="main-btn">Connect Wallet</button>
     </div>
 
     <script src="script.js"></script>
