--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>Web3 Dashboard</title>
+  
+  <!-- Add your NEW Moralis API key here (after you regenerate it) -->
+  <script>
+    window.__MORALIS_API_KEY__ = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJub25jZSI6ImUwZDAzNGI1LWQxZjktNDkzZC1iMWVjLTgyZmNkMTY1NmE5NiIsIm9yZ0lkIjoiNDgxODI2IiwidXNlcklkIjoiNDk1Njk4IiwidHlwZSI6IlBST0pFQ1QiLCJ0eXBlSWQiOiIyNjJkNTUxZS1iNDA4LTQ0ZmEtYTU1MS1mYTNiY2U0ZDk3NWEiLCJpYXQiOjE3NjM3Mjc2MTQsImV4cCI6NDkxOTQ4NzYxNH0.mgx_N-9l4QvIYztaOxT-HGTQfAkMwUhk1n-lTRsaTOY';
+  </script>
+  
   <link rel="stylesheet" href="style.css">
 </head>
 
