--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
   
   <!-- Add your NEW Moralis API key here (after you regenerate it) -->
   <script>
-    window.__MORALIS_API_KEY__ = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJub25jZSI6ImUwZDAzNGI1LWQxZjktNDkzZC1iMWVjLTgyZmNkMTY1NmE5NiIsIm9yZ0lkIjoiNDgxODI2IiwidXNlcklkIjoiNDk1Njk4IiwidHlwZSI6IlBST0pFQ1QiLCJ0eXBlSWQiOiIyNjJkNTUxZS1iNDA4LTQ0ZmEtYTU1MS1mYTNiY2U0ZDk3NWEiLCJpYXQiOjE3NjM3Mjc2MTQsImV4cCI6NDkxOTQ4NzYxNH0.mgx_N-9l4QvIYztaOxT-HGTQfAkMwUhk1n-lTRsaTOY';
+    window.__MORALIS_API_KEY__ = 'PASTE_YOUR_NEW_API_KEY_HERE';
   </script>
   
   <link rel="stylesheet" href="style.css">
@@ -112,12 +112,6 @@
                   </tbody>
               </table>
 
-          </div>
-
-          <!-- Portfolio Summary -->
-          <div class="card glass wide" id="portfolioSummary" style="margin-top: 20px;">
-              <h3>📊 Portfolio Summary</h3>
-              <p style="color: #999;">Calculating...</p>
           </div>
 
       </div>
