--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <title>Web3 Dashboard</title>
   
   <script>
-    window.__MORALIS_API_KEY__ = 'PASTE_YOUR_NEW_API_KEY_HERE';
+    window.__MORALIS_API_KEY__ = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJub25jZSI6ImUwZDAzNGI1LWQxZjktNDkzZC1iMWVjLTgyZmNkMTY1NmE5NiIsIm9yZ0lkIjoiNDgxODI2IiwidXNlcklkIjoiNDk1Njk4IiwidHlwZSI6IlBST0pFQ1QiLCJ0eXBlSWQiOiIyNjJkNTUxZS1iNDA4LTQ0ZmEtYTU1MS1mYTNiY2U0ZDk3NWEiLCJpYXQiOjE3NjM3Mjc2MTQsImV4cCI6NDkxOTQ4NzYxNH0.mgx_N-9l4QvIYztaOxT-HGTQfAkMwUhk1n-lTRsaTOY';
   </script>
   
   <style>
@@ -673,7 +673,7 @@
       const tbody = document.getElementById('trackingTable');
       
       // Check for Moralis API key
-      if (!window.__MORALIS_API_KEY__ || window.__MORALIS_API_KEY__ === 'PASTE_YOUR_NEW_API_KEY_HERE') {
+      if (!window.__MORALIS_API_KEY__ || window.__MORALIS_API_KEY__ === 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJub25jZSI6ImUwZDAzNGI1LWQxZjktNDkzZC1iMWVjLTgyZmNkMTY1NmE5NiIsIm9yZ0lkIjoiNDgxODI2IiwidXNlcklkIjoiNDk1Njk4IiwidHlwZSI6IlBST0pFQ1QiLCJ0eXBlSWQiOiIyNjJkNTUxZS1iNDA4LTQ0ZmEtYTU1MS1mYTNiY2U0ZDk3NWEiLCJpYXQiOjE3NjM3Mjc2MTQsImV4cCI6NDkxOTQ4NzYxNH0.mgx_N-9l4QvIYztaOxT-HGTQfAkMwUhk1n-lTRsaTOY') {
         tbody.innerHTML = `
           <tr>
             <td colspan="8" style="padding: 20px; text-align: center; color: #ffb400;">
